--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -30,7 +30,8 @@ jobs:
           python-version: "3.10"
       - name: Install Dependencies
         run: |
-        python -m pip install --upgrade pip
-        pip install pandas
+          python -m pip install --upgrade pip
+          pip install pandas
       - name: Run the test py
-        run: testing_file_creation.py
+        run: |
+          testing_file_creation.py
