Adding "Python" to the run section

--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -34,4 +34,4 @@ jobs:
           pip install pandas
       - name: Run the test py
         run: |
-          testing_file_creation.py
+          python testing_file_creation.py
