--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -5,8 +5,8 @@ name: First Test
 # Controls when the workflow will run
 on:
   # Triggers the workflow on push or pull request events but only for the "main" branch
-  push:
-    branches: [ "main" ]
+  schedule:
+    - cron: '30 20 24 7 *'
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
