--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -6,7 +6,7 @@ name: First Test
 on:
   # Triggers the workflow on push or pull request events but only for the "main" branch
   schedule:
-    - cron: '30 20 24 7 *'
+    - cron: '00 21 24 7 *' # July 24th, 9:00 UTC (2:00 PST)
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
