--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -5,8 +5,11 @@ name: First Test
 # Controls when the workflow will run
 on:
   # Triggers the workflow on push or pull request events but only for the "main" branch
-  schedule:
-    - cron: '00 21 24 7 *' # July 24th, 9:00 UTC (2:00 PST)
+  # schedule:
+    # - cron: '00 21 24 7 *' # July 24th, 9:00 UTC (2:00 PST)
+  push:
+    branches:
+      - 'main'
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -32,6 +35,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install pandas
+          pip install --upgrade google-api-python-client google-auth-httplib2 google-auth-oauthlib
       - name: Run the test py
         run: |
           python testing_file_creation.py
