--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -14,6 +14,10 @@ on:
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
+# Secret variables for authentication
+env:
+  SERVICE_ACCOUNT_CREDENTIALS_JSON: ${{ secrets.SERVICE_ACCOUNT_CREDENTIALS_JSON }}
+
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
