--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -4,7 +4,7 @@ name: First Test
 
 # Controls when the workflow will run
 on:
-  workflow_dispatch:
+  workflow_dispatch
   # Triggers the workflow on push or pull request events but only for the "main" branch
   # schedule:
     # - cron: '00 21 24 7 *' # July 24th, 9:00 UTC (2:00 PST)
