--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -39,6 +39,7 @@ jobs:
           pip install --upgrade google-api-python-client google-auth-httplib2 google-auth-oauthlib
           pip install selenium
           pip install beautifulsoup4
+          pip install lxml
       - name: Run the test py
         run: |
           python testing_file_creation.py
