--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -35,11 +35,7 @@ jobs:
       - name: Install Dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install pandas
-          pip install --upgrade google-api-python-client google-auth-httplib2 google-auth-oauthlib
-          pip install selenium
-          pip install beautifulsoup4
-          pip install lxml
+          pip install -r requirements.txt
       - name: Run the test py
         run: |
           python testing_file_creation.py
